recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:17: error: reassignment to val
			doitAvancer=true
                                   ^