recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	def sierBis(level:Int, length:Double, doitAvancer:Boolean) {
		if (level==0) {
			for (i <- 1 to 3) {
				avance(length)
				droite(120)
			}
		} else {
			for (i <- 1 to 3) {
				sierpinski(level-1,length/2)
				droite(120)
			}
		}
		if (doitAvancer) {
			avance(2*length)	
		} else {
			doitAvancer=true
		}
	}
	sierBis(level, length, false)
}
